change heading color to white

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 .MH{
-    color: hwb(0 100% 0%);
+    color: white;
     background-color: rgb(3, 36, 73);
     text-align: center;
     font-family: cursive;
